--- a/.travis.yml
+++ b/.travis.yml
@@ -30,11 +30,6 @@ before_install:
 script:
   - ./easybuild.sh
 
-notifications:
-  irc:
-    template:
-      - "%{repository}#%{build_number} %{commit} %{author}: %{message} %{build_url}"
-    channels:
-      - "irc.freenode.org#etlegacy"
-    use_notice: true
-    skip_join: true
+branches:
+  only:
+    - develop
